# media-agent

./: .gitignore  Makefile  README.md  history.json  pyproject.toml
data/: history.json
src/: __init__.py  main.py
src/common/: spinner.py
src/cowriter/: assistant.py  utils.py
src/cowriter/app/: llm.py  main.py  ui.py
src/cowriter/examples/: introduction.md
src/cowriter/prompts/: introduction.prompt  system.prompt
src/reddit/: ask_reddit.py  config.py  document_loader.py  reddit_scraper.py  utils.py
src/twitter/: __init__.py  ask_twitter.py  config.py  document_loader.py  main.py  twitter_scraper.py  utils.py
src/twitter/utils/: chains.py  config.py  data_processing.py  display.py  document_loader.py  prompts.py  search.py  twitter_agent.py  twitter_scraper.py
src/utils/: agent.py  chains.py  data_processing.py  display.py  document_loader.py  prompts.py  search.py  twitter_agent.py
